// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component tests renders in a disabled state 1`] = `
<View
  acceptsFirstMouse={false}
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={false}
  focusable={false}
  keyDownEvents={
    [
      {
        "key": " ",
      },
      {
        "key": "Enter",
      },
    ]
  }
  mouseDownCanMoveWindow={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0078d4",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      false,
      {
        "backgroundColor": "#c8c8c8",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
        },
        {
          "color": "#888888",
        },
      ]
    }
  >
    Disabled
  </Text>
</View>
`;

exports[`Button component tests renders with a title 1`] = `
<View
  acceptsFirstMouse={true}
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={true}
  focusable={true}
  keyDownEvents={
    [
      {
        "key": " ",
      },
      {
        "key": "Enter",
      },
    ]
  }
  mouseDownCanMoveWindow={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0078d4",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
        },
        undefined,
      ]
    }
  >
    Click me
  </Text>
</View>
`;
